--- a/src/AuctionService/appsettings.Development.json
+++ b/src/AuctionService/appsettings.Development.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=auctions;User Id=postgres;Password=Predator170"
   },
-  "IdentityServiceUrl": "http://localhost:5000"
+  "IdentityServiceUrl": "http://localhost:5000",
+  "RabbitMq": {
+    "Host": "localhost"
+  }
 }
