--- a/src/SearchService/appsettings.Development.json
+++ b/src/SearchService/appsettings.Development.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "MongoDbConnection": "mongodb://root:Predator170@localhost"
   },
-  "AuctionServiceUrl": "http://localhost:7001"
+  "AuctionServiceUrl": "http://localhost:7001",
+  "RabbitMq": {
+    "Host": "localhost"
+  }
 }
